<resources>
    <string name="app_name">My Application</string>
    <string name="title">Le Démineur™</string>
    <string name="play_button">Jouer</string>
    <string name="score_button">Score</string>
    <string name="easymode_button">Facile</string>
    <string name="mediummode_button">Moyen</string>
    <string name="hardmode_button">Difficile</string>
    <string name="home_toolbarButton">Home</string>
    <string name="back_toolbarButton">Retour</string>
    <string name="nbBombs">Number of bombs:</string>
    <string name="high_score_save_file">com.istia.groupe.myapplication.HIGH_SCORE_FILE_KEY</string>
    <string name="reset_toolbarButton">Reset</string>
    <string name="custommode_button">Custom</string>
    <string name="specify_title">Specify the board size:</string>
    <string name="rows">Rows:</string>
    <string name="col">Columns:</string>
    <string name="pleasefillall">Please complete all fields.</string>
    <string name="title_tab_highscore">High Scores</string>
</resources>
