<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">

  <item
    android:title="@string/home_toolbarButton"
    android:id="@+id/home_toolbarAction"
    android:icon="@drawable/home"
    android:orderInCategory="100"
    app:showAsAction="ifRoom"
    />

  <item
    android:title="@string/back_toolbarButton"
    android:icon="@android:drawable/ic_menu_revert"
    android:id="@+id/back_toolbarAction"
    android:orderInCategory="200"
    app:showAsAction="ifRoom"
    />

  <item
    android:title="@string/reset_toolbarButton"
    android:icon="@android:drawable/ic_menu_rotate"
    android:id="@+id/reset_toolbarAction"
    android:orderInCategory="99"
    app:showAsAction="ifRoom"
    />

  <item
    android:title="@string/easymode_button"
    android:id="@+id/easy_toolbarAction"
    android:orderInCategory="300"
    app:showAsAction="never"
    />

  <item
    android:title="@string/mediummode_button"
    android:id="@+id/medium_toolbarAction"
    android:orderInCategory="300"
    app:showAsAction="never"
    />

  <item
    android:title="@string/hardmode_button"
    android:id="@+id/hard_toolbarAction"
    android:orderInCategory="400"
    app:showAsAction="never"
    />

</menu>