<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:gravity="center"
  android:background="@color/greyDemineur"
  tools:context="com.istia.groupe.myapplication.MainActivity"
  >

  <android.support.v7.widget.Toolbar
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/darkGrey"
    android:minHeight="50dp"
    />

  <Space
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:text="@string/title"
    android:textSize="40sp"
    android:layout_weight="1"
    android:gravity="center"/>

  <Button
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:text="@string/play_button"
    />

  <Button
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:text="@string/score_button"
    />

  <Space
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"/>

</LinearLayout>
